FrostWire 2.4.2 build 684 - SEP/21/2021
 - Search screen rewritten, considerably faster search results
 - WRITE_EXTERNAL and WRITE_SETTINGS permissions no longer required
 - Android 11+ compatibility updates in the way the app interacts with the Android Media Store API
 - After Android 10, files can no longer be deleted from "My Files", this has been delegated to
   the OS's File Manager, less is more.
 - gradle:4.1.0 -> 4.2.2 -> 7.0.2
 - Java 11 language support, common/ and android/ codebased will be modernized through future updates
 - Storage location selection feature dropped, the application will use external shared storage where available by default
 - minSdkVersion 24 (Android 7.0)
 - targetSdkVersion 30 (Android 11)
 - New jlibtorrent 1.2.14.1 (no more netlink sockets, ifaddr sockets)
 - Set as Ringtone action removed (needed WRITE_SETTINGS) permission
 - Soundcloud search fixed
 - lt:fix issue on MacOS where the DHT was not restarted on a network-up notification
 - lt:make remove_torrent flags be treated as flags (instead of an enum)
 - lt:improve handling of seed flag in PEX messages
 - lt:fix issue of accruing unlimited DHT node candidates when DHT is disabled
 - lt:fix bug in parsing chunked encoding
 - lt:fix incorrect reporting of active_duration when entering graceful-pause
 - com.google.gms:google-services:4.3.10
 - com.google.firebase:firebase-crashlytics-gradle:2.7.1
 - com.google.android.flexbox:flexbox:3.0.0
 - com.mopub:mopub-sdk:5.18.0
 - com.mopub.mediation:unityads:3.7.5.0
 - com.mopub.mediation:applovin:10.3.3.0
 - com.unity3d.ads:unity-ads:3.7.5
 - com.applovin:applovin-sdk:10.3.2
 - com.google.android.material:material:1.4.0
 - androidx.exifinterface:exifinterface:1.3.3
 - androidx.appcompat:appcompat:1.3.1
 - androidx.recyclerview:recyclerview:1.2.1
 - androidx.core:core-ktx:1.6.0
 - com.google.android.gms:play-services-ads:20.2.0
 - com.android.billingclient:billing:4.0.0
 - com.google.android.gms:play-services-ads:20.3.0