@@ -87,13 +87,13 @@ boolean isAssembleRelease = gradle.startParameter.taskNames.contains("assembleRe
 
 android {
     // By November 2021, all apps that are being updated must target at least Android 11 (API level 30)
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId 'com.frostwire.android'
         versionName project.ext.versionName
         minSdkVersion 24 // Android 7.0 Nougat, they added ifaddr (as an option to netlink)
-        targetSdkVersion 30 // Android 11
+        targetSdkVersion 31 // Android 12
         multiDexEnabled true
     }
 
@@ -199,9 +199,9 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'com.google.code.gson:gson:2.8.8'
-    implementation 'androidx.media2:media2-session:1.1.3'
-    implementation 'androidx.media2:media2-widget:1.1.3'
-    implementation 'androidx.media2:media2-player:1.1.3'
+    implementation 'androidx.media2:media2-session:1.2.0'
+    implementation 'androidx.media2:media2-widget:1.2.0'
+    implementation 'androidx.media2:media2-player:1.2.0'
     implementation 'com.mopub.volley:mopub-volley:2.1.0'
 
     // MoPub SDK
